# metalmorphosis

./: Cargo.toml  README.md  benchmarks_og_bilag.md  dhat.out.10440  dhat.out.11194  dhat.out.1235  dhat.out.12357  dhat.out.15910  dhat.out.17560  dhat.out.1847  dhat.out.20397  dhat.out.21382  dhat.out.25068  dhat.out.26315  dhat.out.26538  dhat.out.27309  dhat.out.29226  dhat.out.30826  dhat.out.30843  dhat.out.30931  dhat.out.31934  dhat.out.32562  dhat.out.32651  dhat.out.4100  experiments.ipynb  hosts  lib.bak.rs  lib.rs.bak  logo.xcf
.ipynb_checkpoints/: experiments-checkpoint.ipynb
examples/: Cargo.toml  basic.rs  math.rs  nothing.rs.bak
src/: allocator.rs  autodiff.rs  blur.rs  branch.rs  buffer.bak.rs  buffer.rs  builder.bak.rs  builder.rs  dummy_net.rs  easy_api.rs  easy_api2.rs  error.rs  executor.rs  internal_utils.rs  lib.bak.rs  lib.bak_2.rs  lib.rs  mpi.rs  mpmc.rs  mpsc.rs  net.rs  network.rs  optimizer.rs  primitives.rs  simd_lanes.rs  static_graph.rs  stupid_futures.rs  tests.rs  threadpool.rs  workpool.rs
src/workpool/: atomic_occupancy.rs  locked_occupancy.rs
