[package]
name = "metalmorphosis"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
dashmap = "5.4.0"
levitate = "0.1.2"
mio = { version = "0.8.0", features = ["net", "os-poll"] }
serde = "1.0.144"
serde_derive = "1.0.144"
thiserror = "1.0.35"

[profile.release]
codegen-units = 1
lto = true
