[package]
name = "metalmorphosis"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bumpalo = { version = "3.11.1", features = ["collections", "boxed"] }
mio = { version = "0.8.0", features = ["net", "os-poll"] }
mpi = "0.6.0"
serde = "1.0.144"
serde_derive = "1.0.144"
thiserror = "1.0.35"

[profile.release]
codegen-units = 1
lto = true
